--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.20.0 <3.33.0"
+  flutter: ">=3.20.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -35,7 +35,7 @@ dependencies:
   cached_network_image: ^3.4.1
   croppy: ^1.3.6
 
-  intl: ^0.19.0
+  intl: ^0.20.2
   package_info_plus: ^8.3.0
   device_info_plus: ^11.5.0
   connectivity_plus: ^6.1.4
@@ -52,10 +52,11 @@ dependencies:
   firebase_remote_config: ^6.0.0
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
+  device_preview: ^1.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_gen_runner: ^5.11.0
   build_runner: ^2.4.15
   package_rename: ^1.10.0
@@ -65,7 +66,7 @@ dev_dependencies:
 
 
 flutter_gen:
-  output: lib/generated/ # Optional: where generated files will be stored
+  output: lib/generated/
   integrations:
     flutter_svg: true
     lottie: true
@@ -76,8 +77,6 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-    - assets/sounds/
-    - assets/fonts/
     - assets/translations/
 flutter_launcher_icons:
   android: true
@@ -113,10 +112,10 @@ flutter_native_splash:
 
 package_rename_config:
   android:
-    app_name: "App Name"
-    package_name: "com.AppName.app"
+    app_name: "Aman"
+    package_name: "com.Aman.app"
 
   ios:
-    app_name: "App Name"
-    bundle_name: "App Name"
-    package_name: "com.AppName.app"
+    app_name: "Aman"
+    bundle_name: "Aman"
+    package_name: "com.Aman.app"
